// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip renders 1`] = `
<div
  className="box xsDisplayBlock"
>
  <div
    className="box"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="tooltip"
  >
    <div>
      Hi
    </div>
  </div>
</div>
`;

exports[`Tooltip renders the hrefText when hovered 1`] = `
<div
  class="box xsDisplayBlock"
>
  <div
    class="box"
    role="tooltip"
  >
    <div>
      Hi
    </div>
  </div>
  <div
    class="container"
    style="visibility: visible; top: -12px; left: -20px;"
  >
    <div
      class="darkGrayBg darkGray contents maxDimensions"
      tabindex="-1"
    >
      <div
        class="innerContents maxDimensions"
      >
        <div
          class="box paddingX2 paddingY1"
          style="max-width: 180px;"
          tabindex="0"
        >
          <div
            class="Text fontSize1 white alignLeft breakWord fontWeightNormal"
          >
            This is a tooltip
          </div>
          <div
            class="box paddingY1"
          >
            <a
              class="link accessibleFocusStyle block"
              href="https://pinterest.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              <div
                class="Text fontSize1 white alignLeft breakWord fontWeightBold"
              >
                Learn more about logout
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tooltip should render as expected when hovered 1`] = `
<div
  class="box xsDisplayBlock"
>
  <div
    class="box"
    role="tooltip"
  >
    <div>
      Hi
    </div>
  </div>
  <div
    class="container"
    style="visibility: visible; top: -12px; left: -20px;"
  >
    <div
      class="darkGrayBg darkGray contents maxDimensions"
      tabindex="-1"
    >
      <div
        class="innerContents maxDimensions"
      >
        <div
          class="box paddingX2 paddingY1"
          style="max-width: 180px;"
          tabindex="0"
        >
          <div
            class="Text fontSize1 white alignLeft breakWord fontWeightNormal"
          >
            This is a tooltip
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
